feat: add custom address password login
